# NumericalPDE

./: .gitignore  LICENSE  MANIFEST.in  Makefile  Numerical_PDE_homework_1.ipynb  Numerical_PDE_homework_2.ipynb  README.md  Statistics.md  config.yaml  main.py  setup.py  simple_poisson.py  solver_comparison_results.csv  test_code.py
cpp/: CMakeLists.txt  base_solver.h  bindings.cpp  jacobi_solver.cpp  jacobi_solver.h  main.cpp
doc/: Project Plan.md  Solution of Project.md  solver_methods.md
example/: 1. Compare dense and sparse.py  2. Compare CPP and python.py  3. Compare all method.py  4. Compare parallel and multithread.py  5. convergence_rate.py  PythonWithCPP.py  pinn.py  test_code.py
src/boundary/: boundary_condition.py  boundary_condition_factory.py  function.py
src/configs/: config.yaml
src/cpp/: Set_2DAV_diags.cpp  Set_2DAV_diags.h  main.cpp  parameters.h
src/grid/: base_grid.py  grid_factory.py  non_uniform_grid.py  uniform_grid.py
src/problem/: poisson_problem.py
src/solver/: base_solver.py  decomposition_solver.py  direct_solver.py  graph_solver.py  iterative_solver.py  multigrid_solver.py  other_solver.py  pinn_solver.py  solver_factory.py
src/tools/: cache.py  plotting.py  preconditioner.py  singleton.py  sparse_matrix.py  utils.py
test/: test_boundary_conditions.py  test_grid.py  test_iterative_solver.py  test_poisson_problem.py  test_preconditioner.py  test_solver.py  test_sparse_matrix.py
